analysis-reports/clang-tidy/._before_libuxre_regerror.c.txt
/home/sj/1/refactoring-heirloom-grep/before/libuxre/colldata.h:57:10: error: 'wcharm.h' file not found with <angled> include; use "quotes" instead [clang-diagnostic-error]
#include <wcharm.h>
         ^~~~~~~~~~
         "wcharm.h"
/home/sj/1/refactoring-heirloom-grep/before/libuxre/re.h:40:10: error: 'colldata.h' file not found with <angled> include; use "quotes" instead [clang-diagnostic-error]
#include <colldata.h>
         ^~~~~~~~~~~~
         "colldata.h"
/home/sj/1/refactoring-heirloom-grep/before/libuxre/regerror.c:74:26: error: use of undeclared identifier 'REG_ILLSEQ' [clang-diagnostic-error]
        if (err < REG_ENOSYS || REG_ILLSEQ < err)
                                ^
